Fix some mobile responsive ui issues
Like canvas size from innerHeight to clientHeigth
And problem from contact which was causing horizontal scrolling

--- a/css/components.css
+++ b/css/components.css
@@ -325,7 +325,7 @@ body.cursor-hover .cursor-ring {
   opacity: 0;
   pointer-events: none;
   transition: all 0.3s;
-  z-index: 50;
+  z-index: 75;
   cursor: none;
   border: none;
 }
